--- a/events/static/css/one-page-wonder.css
+++ b/events/static/css/one-page-wonder.css
@@ -12,12 +12,27 @@ h6 {
   font-weight: 800 !important;
 }
 
+.white, .white a {
+  color: #fff;
+}
+
 .btn-xl {
   text-transform: uppercase;
   padding: 1.5rem 3rem;
   font-size: 0.9rem;
   font-weight: 700;
   letter-spacing: 0.1rem;
+}
+
+.box {
+    width:300px;
+    height:300px;
+    background-color:#d9d9d9;
+    position:fixed;
+    margin-left:-150px; /* half of width */
+    margin-top:-150px;  /* half of height */
+    top:50%;
+    left:50%;
 }
 
 .bg-black {
