--- a/events/templates/navbar.html
+++ b/events/templates/navbar.html
@@ -1,9 +1,31 @@
 <nav class="navbar navbar-expand-lg navbar-dark navbar-custom fixed-top">
   <div class="container">
-    <a class="navbar-brand" href="#">Django Event Planner</a>
+      {% if user.is_authenticated %}
+      <a href="{% url 'dashboard' %}">
+      {% else %}
+      <a href="{% url 'login' %}">
+      {% endif %}
+
+    <a class="navbar-brand" href="{% url 'dashboard' %}">Dashboard</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
+    </a>
+
+    <h4>&nbsp; &nbsp; &nbsp;</h1>
+    <a class="navbar-brand" href="{% url 'event-create' %}">Create Event</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    </a>
+
+    <h4>&nbsp; &nbsp; &nbsp;</h1>
+    <a class="navbar-brand" href="{% url 'event-history' %}">Events History</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    </a>
+
     <div class="collapse navbar-collapse" id="navbarResponsive">
       <ul class="navbar-nav ml-auto">
         {% if request.user.is_anonymous %}
