--- a/events/templates/dashboard.html
+++ b/events/templates/dashboard.html
@@ -38,6 +38,15 @@
 
 </div>
 
+<div class="col-sm-12">
+		<div class="card-body">
+            <div class="card-body text-center">
+			<a href="{% url 'user-list' %}" class="btn btn-secondary btn-xl btn-block">Organizers List</a>
+	</div>
+</div>
+
+</div>
+
 </div>
 
 
