--- a/events/templates/navbar.html
+++ b/events/templates/navbar.html
@@ -39,9 +39,15 @@
         <li class="nav-item">
           <a class="nav-link" href="{% url 'logout' %}">Log Out</a>
         </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">{{ request.user }}</a>
-        </li>
+
+
+        <li class="nav-item dropdown">
+        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+          {{request.user}}
+        </a>
+        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+          <a class="dropdown-item" href="{% url 'user-profile' request.user.id %}">Profile</a>
+      </li>
         {% endif %}
       </ul>
     </div>
