--- a/events/templates/edit_profile.html
+++ b/events/templates/edit_profile.html
@@ -8,7 +8,7 @@
         <div class="jumbotron">
           <h2 class="masthead-subheading mb-0">Edit Profile</h2>
 
-          <form method="post">
+          <form method="post" enctype="multipart/form-data">
             {% csrf_token %}
             {{ user_form|crispy }}
             {{ profile_form|crispy }}
