--- a/events/templates/booked_events.html
+++ b/events/templates/booked_events.html
@@ -5,22 +5,61 @@
 <br><h1 align="center"><strong><font color="white"> Booked Events </font></strong></h1><br>
 
 
-<div class="row">
-    {% for booking in bookings %}
-<div class="col-sm-6">
+<div class="container text-center">
+<ul class="nav nav-pills nav-justified">
+  <li><a data-toggle="pill" href="#home" aria-selected="true" class="btn btn-secondary btn-sm">Block View</a></li>
+  <li><a data-toggle="pill" href="#list" class="btn btn-secondary btn-sm">List View</a></li>
+</ul>
 
-		<div class="card-body">
-            <header class="masthead text-center text-white">
+<br>
+<div class="tab-content">
+    <div id="home" class="tab-pane active">
+        <div class="row">
+            {% for booking in bookings %}
+        <div class="col-sm-6">
 
-                <h2 class="card-title">{{booking.event.title}} ({{booking.ticketnums}} tickets)</h2>
+                    <header class="masthead text-center text-white">
+        			<h2 class="card-title text-center">{{booking.event.title}}</h2>
                     <h6 class="card-title text-center">{{booking.event.date}} at {{booking.event.time}}</h6>
-                <a href="{% url 'event-detail' booking.event.id %}" class="btn btn-secondary">View Details</a>
-            <div class="card-body text-center">
+                    <div class="card-body text-center">
+        			<a href="{% url 'event-detail' booking.event.id %}" class="btn btn-secondary">View</a>
+                    </header>
+                    <br>
 
-            </header>
-	</div>
+        </div>
+        {% endfor %}
+        </div>
+</div>
+
+<div id="list" class="tab-pane fade in active">
+    <table class="table table-dark table-striped text-center">
+      <thead>
+        <tr>
+          <th scope="col">Title</th>
+          <th scope="col">Date</th>
+          <th scope="col">Time</th>
+          <th scope="col">Location</th>
+          <th scope="col">Tickets Bought</th>
+          <th scope="col">Details</th>
+        </tr>
+      </thead>
+      <tbody>
+        {% for booking in bookings %}
+        <tr>
+          <td>{{booking.event.title}}</td>
+          <td>{{booking.event.date}}</td>
+          <td>{{booking.event.time}}</td>
+          <td>{{booking.event.location}}</td>
+          <td>{{booking.ticketnums}}</td>
+          <td><a href="{% url 'event-detail' booking.event.id %}" class="btn btn-secondary btn-sm">View Details</a></td>
+        </tr>
+        {% endfor %}
+      </tbody>
+    </table>
+</div>
 
 </div>
-{% endfor %}
 </div>
+
+
 {% endblock content %}
