--- a/events/templates/users_list.html
+++ b/events/templates/users_list.html
@@ -2,11 +2,8 @@
 
 {% block content %}
 
-{% if request.user.is_staff %}
-<br><h1 align="center"><strong><font color="white"> Admin's Events </font></strong></h1><br>
-{% else %}
-<br><h1 align="center"><strong><font color="white"> {{request.user.first_name}}'s Events </font></strong></h1><br>
-{% endif %}
+<br><h1 align="center"><strong><font color="white"> Organizers </font></strong></h1><br>
+
 
 
 
