--- a/events/templates/all_events.html
+++ b/events/templates/all_events.html
@@ -14,32 +14,66 @@
     </div>
   </div>
 </form>
-
-
 </div>
 </div>
 
 <br><h1 align="center"><strong><font color="white"> Upcoming Events </font></strong></h1><br>
 
+<div class="container text-center">
+<ul class="nav nav-pills nav-justified">
+  <li><a data-toggle="pill" href="#home" tabsaria-selected="true" class="btn btn-secondary btn-sm">Block View</a></li>
+  <li><a data-toggle="pill" href="#list" class="btn btn-secondary btn-sm">List View</a></li>
+</ul>
 
-<div class="row">
-    {% for event in events %}
-<div class="col-sm-6">
+<br>
+<div class="tab-content">
+    <div id="home" class="tab-pane active">
+        <div class="row">
+            {% for event in events %}
+        <div class="col-sm-6">
 
-		<div class="card-body">
-            <header class="masthead text-center text-white">
+                    <header class="masthead text-center text-white">
+        			<h2 class="card-title text-center">{{event.title}}</h2>
+                    <h6 class="card-title text-center">{{event.date}} at {{event.time}}</h6>
+                    <div class="card-body text-center">
+        			<a href="{% url 'event-detail' event.id %}" class="btn btn-secondary">View</a>
+                    </header>
+                    <br>
 
-			<h2 class="card-title text-center">{{event.title}}</h2>
-            <h6 class="card-title text-center">{{event.date}} at {{event.time}}</h6>
-            <div class="card-body text-center">
-			<a href="{% url 'event-detail' event.id %}" class="btn btn-secondary">View</a>
+        </div>
+        {% endfor %}
+        </div>
+</div>
 
-
-            </header>
-
-	</div>
+<div id="list" class="tab-pane fade in active">
+    <table class="table table-dark table-striped text-center">
+      <thead>
+        <tr>
+          <th scope="col">Title</th>
+          <th scope="col">Date</th>
+          <th scope="col">Time</th>
+          <th scope="col">Location</th>
+          <th scope="col">Price</th>
+          <th scope="col">Details</th>
+        </tr>
+      </thead>
+      <tbody>
+        {% for event in events %}
+        <tr>
+          <td>{{event.title}}</td>
+          <td>{{event.date}}</td>
+          <td>{{event.time}}</td>
+          <td>{{event.location}}</td>
+          <td>{{event.price}}</td>
+          <td><a href="{% url 'event-detail' event.id %}" class="btn btn-secondary btn-sm">View Details</a></td>
+        </tr>
+        {% endfor %}
+      </tbody>
+    </table>
+</div>
 
 </div>
-{% endfor %}
 </div>
+
+
 {% endblock content %}
