--- a/events/templates/event_history.html
+++ b/events/templates/event_history.html
@@ -6,12 +6,7 @@
 
 <br><h1 align="center"><strong><font color="white"> Events History </font></strong></h1><br>
 
-
-
-
-
-
-<table class="table table-dark table-striped text-center">
+<table class="table table-striped table-dark text-center">
   <thead>
     <tr>
       <th scope="col">Event ID</th>
@@ -22,7 +17,6 @@
       <th scope="col">Total Price</th>
     </tr>
   </thead>
-
 {% for booking in past_bookings %}
   <tbody>
     <tr>
